fix: Prevent the footer logo from collapsing when containing the media placeholder

--- a/src/styles/elements/_media-placeholder.css
+++ b/src/styles/elements/_media-placeholder.css
@@ -20,7 +20,7 @@
         border-radius: var(--media-placeholder-border-radius);
     }
 
-    .topbar__logo-link .media-placeholder {
+    :is(.topbar__logo-link, .footer__logo) .media-placeholder {
         height: var(--media-placeholder-icon-size);
         width: var(--media-placeholder-icon-size);
     }
